Added router func

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>RealNews - get the real news around the world</title>
+  <title>TodayNews - get the daily news around you</title>
 </head>
 
 <body>
